--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Launch Checklist Form</h1>
+        <button id = "refersh">Refersh destination</button>
         <div id="missionTarget">
             <!-- Fetch some planetary data -->
         </div> 
